# silicon

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  LICENSE  README.md  SiliconConfig.cmake.in  SiliconConfigVersion.cmake.in  _config.yml  biicode.conf  blog.html  contributing.md  feed.xml  index.html  install.sh  notes.txt
_blog/: a_simple_silicon_blog_api.md  how_to_implement_a_realtime_broadcast_chat_with_silicon.md  silicon-0-1.md  silicon-0-2.md
_docs/: 0welcome.md  apis.md  backends.md  getting_started.md  hello_world.md  hello_world_benchmark.md  hello_world_benchmark_log.txt  lwan.md  microhttpd.md  middlewares.md  mimosa.md  sessions.md  sql.md  sql_crud.md  sql_orm.md  sql_rest.md  symbols.md  websocketpp.md
_includes/: footer.html  head.html  top.html
_layouts/: blog.html  documentation.html  homepage.html  post.html
benchmarks/: CMakeLists.txt  urldecode.cc
blog/: index.html
client_templates/: javascript.js  websocket.js
cmake/: FindIod.cmake
examples/: CMakeLists.txt  access_http_header_with_mhd.cc  blog.cc  blog_api.hh  blog_test.cc  file_streaming.cc  https.cc  simple.cc  symbols.hh  ws_broadcast_server.cc
silicon/: api.hh  api_description.hh  api_to_sio.hh  base_64.hh  blob.hh  client.hh  cookie_token.hh  cppnet_serve.hh  cppnetlib_backend.cc  cppnetlib_backend.hh  crud.hh  di_factories.hh  di_middlewares.hh  dynamic_routing_table.hh  error.hh  file.hh  handler_traits.hh  hash.hh  http_route.hh  javascript_client.hh  mhd_serve.hh  microhttpd_backend.hh  microhttpd_serve.hh  middleware_factories.hh  mimosa_backend.cc  mimosa_backend.hh  mimosa_backend.hpp  mimosa_serve.hh  mysql.hh  null.hh  optional.hh  procedure_desc.hh  remote_api.hh  response.hh  rmq_route.hh  run_handler.hh  server.hh  service.hh  session_middleware.hh  sql_crud.hh  (+15 more)
silicon/backends/: cppnet.hh  cppnet_serve.hh  h2o.hh  lwan.hh  mhd.hh  mhd_serve.hh  mimosa.hh  mimosa_serve.hh  rabbitmq.hh  urldecode.hh  websocketpp.hh  websocketpp_remote_client.hh  ws_api.hh  ws_route.hh  wspp_connection.hh
silicon/client_templates/: javascript.hh.in  javascript_websocket.hh.in
silicon/clients/: client.hh  javascript_client.hh  libcurl_client.hh  rmq_client.hh
silicon/clients/templates/: javascript.hh  javascript_websocket.hh
silicon/middlewares/: get_parameters.hh  hashmap_session.hh  mysql_connection.hh  mysql_orm.hh  mysql_session.hh  mysql_types.hh  sql_orm.hh  sql_session.hh  sqlite_connection.hh  sqlite_orm.hh  sqlite_session.hh  sqlite_types.hh  tracking_cookie.hh
stylesheets/: pygment_trac.css  styles.css
tests/: CMakeLists.txt  api_nesting.cc  backend_testsuite.hh  client.cc  cppnet_hello_world.cc  cppnetlib.cc  crud.cc  crud_lwan.cc  get_parameters.cc  global_middlewares.cc  hashmap_session.cc  http_backend_testsuite.hh  javascript_client.cc  libcurl_client.cc  lwan.cc  lwan_hello_world.cc  mdh.cc  mhd.cc  microhttpd_hello_world.cc  middlewares.cc  mimosa.cc  mimosa_hello_world.cc  mysoundcloud.cc  mysoundcloud.sqlite  mysoundcloud2.cc  mysoundcloud3.cc  mysoundcloud4.cc  mysoundcloud_test.cc  mysoundcloud_test.js  mysql.cc  mysql_authentication.cc  optional.cc  pre_typed_handlers.cc  prefix_path.cc  rest.cc  rmq_listen.cc  rmq_producer.cc  rmq_test.cc  rmq_test_api.hh  rmq_worker.cc  (+19 more)
tests/files/: hello.txt
